# vcalc

./: CMakeLists.txt  README.md  ast.c  ast.h  hash.c  khash.h  lexer.l  main.c  parser.y  simd.c  vec.c
test/data/: piping-functions.vc  simple.vc
